<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Landlord Buddy</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_text">Welcome</string>
    <string name="user_name">Enter your name</string>
    <string name="email_address_hint">Enter your Email Address</string>
    <string name="continue_button">Continue</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_new_entry">AddNewEntry</string>
    <string name="phone_number">Phone No:</string>
    <string name="email_address">Email ID:</string>
    <string name="deposit_dollar">Deposit:</string>
    <string name="rent_dollar">Rent:</string>
    <string name="rent_paid">Rent Paid:</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="title_activity_user_detail">UserDetailActivity</string>
    <string name="fullname_text">Hrishikesh Sardar</string>
    <string name="fulladdress_text">2400, Virginia Avenue, NW, C907, Washington DC, 20037</string>
    <string name="email_address_text">Hrishikesh@gwu.edu</string>
    <string name="due_text">Amount due by the end of current month</string>
    <string name="image_missing">></string>
    <string name="text_paid">Paid:</string>
    <string name="text_due">Due:</string>
    <string name="due_amount">$1500</string>
    <string name="paid_amount">$1900</string>
    <string name="title_activity_statup_home">StatupHomeActivity</string>
    <string name="instructions_text">Welcome to "Landlord Buddy", Managing Tenants made easy. To start, click "+"</string>
    <string name="action_add">+</string>
    <string name="action_exit">Exit</string>
    <string name="action_logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="action_export_app_data">Export App Data</string>
    <string name="action_about">About</string>
    <string name="action_edit">Edit</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="version_number">LANDLORD BUDDY v1.0</string>
    <string name="by">By</string>
    <string name="welcome_message">Hello Hrishikesh!</string>
    <string name="subtitle_text">Managing Tenants made easy</string>
    <string name="plus_instruction">Click on \'+\' to start</string>
    <string name="name_text">Name:</string>
    <string name="address_text">Address:</string>
    <string name="phone_text">Phone:</string>
    <string name="email_text">Email:</string>
    <string name="amount_due_text">Amount Due:</string>
    <string name="amount_paid_text">Amount Paid:</string>
    <string name="notify_button_text">Notify</string>
    <string name="delete_button_text">Delete</string>
    <string name="google_maps">Google Maps</string>
    <string name="month">Month:</string>
    <string name="month_prompt">Select Month:</string>
    <string name="select_year">Year:</string>

    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string name="tenant_name">Tenant Name</string>
    <string name="tenant_address">Tenant Postal Address</string>
    <string name="tenant_phone">Phone Number</string>
    <string name="tenant_email">E-mail Address</string>
    <string name="tenant_deposit">Deposit</string>
    <string name="export_tenant">Export Tenants Information</string>
    <string name="export_details">Export Tenant Details Information</string>
    <string name="export_db">Export Application Database</string>
    <string name="rent_due">Rent Due:</string>
    <string name="title_activity_csv">CsvActivity</string>
    <string name="table_year">Year</string>
    <string name="table_month">Month</string>
    <string name="table_Rent">Rent</string>
    <string name="table_paid">Paid</string>
    <string name="table_due">Due</string>
    <string name="database_message">Successfully Imported SQLite Database</string>
    <string name="tenantexport_message">Successfully Imported Tenants Information into csv from SQLite Database</string>
    <string name="detailsexport_message">Successfully Imported Tenant Details into csv from SQLite Database</string>
    <string name="title_activity_records">RecordsActivity</string>
	<string name="histogram">Histogram</string>
	<string name="piechart">Pie Chart</string>
	<string name="action_records">Record Charts</string>
	<string name="contacts">Contact Information</string>
</resources>
