<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddNewEntry" >    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal" >
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/name_text" />
	        <EditText
            	android:id="@+id/TenantName"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:inputType="textCapWords"
	            android:hint="Tenant Name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_text" />

        <EditText
            android:id="@+id/TenantAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:hint="Postal Address" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal" >
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/phone_number" />
	        <EditText
            	android:id="@+id/TenantPhone"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:inputType="phone"
            	android:hint="Phone Number" />
    </LinearLayout>
    <LinearLayout 
        android:gravity="right"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/email_address" />
	        <EditText 
            	android:id="@+id/TenantEmail"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:inputType="textEmailAddress"
            	android:hint="E-mail Address"/>
    </LinearLayout>
    <LinearLayout 
        android:gravity="right"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/deposit_dollar"     
	            />
	        <EditText 
            	android:id="@+id/TenantDeposit"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:inputType="numberDecimal"
            	android:hint="Deposit"
	            />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <Button
            android:id="@+id/save_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/save_button" />
    </RelativeLayout>
</LinearLayout>
