<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetailActivity" >

    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

           <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/details_tab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" 
                    android:paddingBottom="@dimen/activity_vertical_margin"
   					android:paddingLeft="@dimen/activity_horizontal_margin"
					android:paddingRight="@dimen/activity_horizontal_margin"
					android:paddingTop="@dimen/activity_vertical_margin">
                    
                    <fragment
                        android:id="@+id/map"
                        android:name="com.google.android.gms.maps.MapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="171dp" />
                    
                   
                    
                    <TextView
                        android:id="@+id/name"
        				android:layout_width="wrap_content"	
        				android:layout_height="wrap_content"
        				android:text="@string/name_text" 
        				android:paddingTop="@dimen/activity_vertical_margin"/>
                    
                    <TextView
                        android:id="@+id/address"
        				android:layout_width="wrap_content"	
        				android:layout_height="wrap_content"
        				android:text="@string/address_text" />
                    
                    <TextView
                        android:id="@+id/phone"
        				android:layout_width="wrap_content"	
        				android:layout_height="wrap_content"
        				android:text="@string/phone_text" />
                    
                    <TextView
                        android:id="@+id/email"
        				android:layout_width="wrap_content"	
        				android:layout_height="wrap_content"
        				android:text="@string/email_text" />
                    
                    <TextView
                        android:id="@+id/due"
        				android:layout_width="wrap_content"	
        				android:layout_height="wrap_content"
        				android:text="@string/amount_due_text" />
                    <TextView
                        android:id="@+id/paid"
        				android:layout_width="wrap_content"	
        				android:layout_height="wrap_content"
        				android:text="@string/amount_paid_text" />
                    
                    <RelativeLayout
        				android:layout_width="match_parent"
       					android:layout_height="match_parent" >

                        <Button
				            android:id="@+id/notify_button"
				            android:layout_width="fill_parent"
				            android:layout_height="wrap_content"
				            android:layout_above="@+id/delete_button"
				            android:layout_alignParentLeft="true"
				            android:text="@string/notify_button_text" />
                        
				        <Button
				            android:id="@+id/delete_button"
				            android:layout_width="fill_parent"
				            android:layout_height="wrap_content"
				            android:layout_alignParentBottom="true"
				            android:layout_alignParentLeft="true"
				            android:text="@string/delete_button_text" />
				
				        
				    </RelativeLayout>
                    
		        </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:id="@+id/records_tab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                    
                    <LinearLayout 
					    android:layout_width="match_parent"
					    android:layout_height="match_parent"
					   	android:orientation="vertical" >
					   	<TableLayout 
					   	    android:layout_width="match_parent"
					   	    android:layout_height="wrap_content">
					   	    <TableRow 
					   	        android:layout_width="match_parent"
					   	        android:layout_height="wrap_content">
					   	        <TextView android:text="Year"
					   	            android:layout_width="wrap_content"
					   	            android:layout_height="wrap_content"
					   	            android:layout_weight="1"
					   				android:textStyle="bold"/>
					   	        <TextView android:text="Month"
					   	            android:layout_width="wrap_content"
					   	            android:layout_height="wrap_content"
					   	            android:layout_weight="1"
					   				android:textStyle="bold"/>
					   	        <TextView android:text="Rent"
					   	            android:layout_width="wrap_content"
					   	            android:layout_height="wrap_content"
					   	            android:layout_weight="1"
					   				android:textStyle="bold"/>
					   	        <TextView android:text="Paid"
					   	            android:layout_width="wrap_content"
					   	            android:layout_height="wrap_content"
					   	            android:layout_weight="1"
					   				android:textStyle="bold"/>
					   	        <TextView android:text="Due"
					   	            android:layout_width="wrap_content"
					   	            android:layout_height="wrap_content"
					   	            android:layout_weight="1"
					   				android:textStyle="bold"/>
					   	    </TableRow>
					   	</TableLayout>
					   	
					    <ListView 
					        android:layout_width="match_parent"
					        android:layout_height="match_parent"
					        android:id="@+id/reportList"/>
							<TableLayout 
						   	    android:layout_width="match_parent"
						   	    android:layout_height="wrap_content">
					   	    <TableRow 
					   	        android:layout_width="match_parent"
					   	        android:layout_height="wrap_content">
					   	        <TextView 
					   	            android:text="Total"
					   	            android:layout_width="wrap_content"
					   	            android:layout_height="wrap_content"
					   	            android:layout_weight="1"
					   				android:textStyle="bold"/>
					   	        <TextView 
					   	            android:layout_width="wrap_content"
					   	            android:layout_height="wrap_content"
					   	            android:layout_weight="1"/>
					   	        <TextView android:id="@+id/totalRent"
					   	            android:layout_width="wrap_content"
					   	            android:layout_height="wrap_content"
					   	            android:layout_weight="1"
					   				android:textStyle="bold"/>
					   	        <TextView android:id="@+id/totalPaid"
					   	            android:layout_width="wrap_content"
					   	            android:layout_height="wrap_content"
					   	            android:layout_weight="1"
					   				android:textStyle="bold"/>
					   	    </TableRow>
					   	</TableLayout>
					</LinearLayout>
                    
                </LinearLayout>
                
                
                <LinearLayout
                    android:id="@+id/paid_tab"
                    android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:orientation="vertical"
		            android:paddingBottom="@dimen/activity_vertical_margin"
   					android:paddingLeft="@dimen/activity_horizontal_margin"
					android:paddingRight="@dimen/activity_horizontal_margin"
					android:paddingTop="@dimen/activity_vertical_margin" >
                    
                    <LinearLayout 
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        
                        <TextView 
                        	android:layout_width="wrap_content"
                        	android:layout_height="wrap_content"
                        	android:text="@string/select_year" />
                        <EditText 
                            android:id="@+id/year_id"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />
                        
                    </LinearLayout>
                    <LinearLayout 
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        
                        <TextView 
                        	android:layout_width="wrap_content"
                        	android:layout_height="wrap_content"
                        	android:text="@string/rent_dollar" />
                        <EditText
                            android:id="@+id/rent_id" 
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />
                        
                    </LinearLayout>
                    <LinearLayout 
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        
                        <TextView 
                        	android:layout_width="wrap_content"
                        	android:layout_height="wrap_content"
                        	android:text="@string/rent_paid" />
                        <EditText 
                            android:id="@+id/paid_id"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />
                        
                    </LinearLayout>
                    <LinearLayout 
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        
                        <TextView 
                        	android:layout_width="wrap_content"
                        	android:layout_height="wrap_content"
                        	android:text="@string/rent_due" />
                        <EditText 
                            android:id="@+id/due_id"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />
                        
                    </LinearLayout>
                    
                    <LinearLayout 
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        
                         <TextView 
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:text="@string/month" />
                         
	                    
	                    <Spinner
	                    	android:id="@+id/spinner_month"
	                    	android:layout_width="match_parent"
	                    	android:layout_height="wrap_content"
	                    	android:entries="@array/months_array"
	                    	android:prompt="@string/month_prompt" />
                        
                    </LinearLayout>
                    
                    
                   
                    
                    <Button
				            android:id="@+id/save_button"
				            android:layout_width="match_parent"
				            android:layout_height="wrap_content"
				            android:text="@string/save_button" />
                    
                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>
